// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`affix renders inactive prefix 1`] = `
<View
  collapsable={false}
  style={
    {
      "height": 24,
      "justifyContent": "center",
      "opacity": 0,
      "paddingRight": 8,
      "top": 2,
    }
  }
>
  <Text
    collapsable={false}
    style={
      {
        "color": "black",
        "fontSize": 16,
        "includeFontPadding": false,
        "textAlign": "left",
        "textAlignVertical": "top",
      }
    }
  >
    a
  </Text>
</View>
`;

exports[`affix renders inactive suffix 1`] = `
<View
  collapsable={false}
  style={
    {
      "height": 24,
      "justifyContent": "center",
      "opacity": 0,
      "paddingLeft": 8,
      "top": 2,
    }
  }
>
  <Text
    collapsable={false}
    style={
      {
        "color": "black",
        "fontSize": 16,
        "includeFontPadding": false,
        "textAlign": "right",
        "textAlignVertical": "top",
      }
    }
  >
    z
  </Text>
</View>
`;

exports[`affix renders prefix 1`] = `
<View
  collapsable={false}
  style={
    Object {
      "height": 24,
      "justifyContent": "center",
      "opacity": 1,
      "paddingRight": 8,
      "textAlign": "left",
      "top": 2,
    }
  }
>
  <Text
    collapsable={false}
    style={
      Object {
        "color": "black",
        "fontSize": 16,
        "includeFontPadding": false,
        "textAlignVertical": "top",
      }
    }
  >
    a
  </Text>
</View>
`;

exports[`affix renders suffix 1`] = `
<View
  collapsable={false}
  style={
    {
      "height": 24,
      "justifyContent": "center",
      "opacity": 1,
      "paddingLeft": 8,
      "top": 2,
    }
  }
>
  <Text
    collapsable={false}
    style={
      {
        "color": "black",
        "fontSize": 16,
        "includeFontPadding": false,
        "textAlign": "right",
        "textAlignVertical": "top",
      }
    }
  >
    z
  </Text>
</View>
`;
